modigying scss files

--- a/sprint-one/index.html
+++ b/sprint-one/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BandSite</title>
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
     <header class="header">
@@ -14,9 +15,9 @@
             <li class="header__nav-item"><a class="header__nav-item-link">Shows</a></li>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <section class="flowers">
-                <h2 class="flower__title">The Bees Knees</h2>
+                <h2 class="flowers__title">The Bees Knees</h2>
         </section>
 
         <section class="about">
@@ -86,11 +87,11 @@
                 <h3 class="footer-contacts__title">The Bees Knees Management</h3>
             </div>
             <div class="footer-contacts-block">
-                <p class="footer-contacts__address">503 Broadway Penthouse,</p>
-                <p class="footer-contacts__address">New York, NY 10012, USA</p>
+                <p class="footer-contacts__info">503 Broadway Penthouse,</p>
+                <p class="footer-contacts__info">New York, NY 10012, USA</p>
             </div>
             <div class="footer-contacts-block">
-                <p class="footer-contacts__address">info@thebeeskness.com</p>
+                <p class="footer-contacts__info">info@thebeeskness.com</p>
             </div>
         </div>
         
@@ -100,12 +101,12 @@
                 <h3 class="footer-contacts__title">Limitless Artist Group</h3>
             </div>
             <div class="footer-contacts-block">
-                <p class="footer-contacts__address">Booking Agent for</p>
-                <p class="footer-contacts__address">US / South America / Japan
+                <p class="footer-contacts__info">Booking Agent for</p>
+                <p class="footer-contacts__info">US / South America / Japan
                 </p>
             </div>
             <div class="footer-contacts-block">
-                <p class="footer-contacts__address">pearl.gregg@limitlessag.com</p>
+                <p class="footer-contacts__info">pearl.gregg@limitlessag.com</p>
             </div>
 
         <div class="footer-contacts">
@@ -114,12 +115,12 @@
                     <h3 class="footer-contacts__title">ARCH Entertainment</h3>
                 </div>
                 <div class="footer-contacts-block">
-                    <p class="footer-contacts__address">Booking Agent for</p>
-                    <p class="footer-contacts__address">UK / EU / AU
+                    <p class="footer-contacts__info">Booking Agent for</p>
+                    <p class="footer-contacts__info">UK / EU / AU
                     </p>
                 </div>
                 <div class="footer-contacts-block">
-                    <p class="footer-contacts__address">cwhyte@atchentertainment.com</p>
+                    <p class="footer-contacts__info">cwhyte@atchentertainment.com</p>
                 </div>    
         </div>
 
