--- a/sprint-one/index.html
+++ b/sprint-one/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="header__title">Bandsite</h1>
+        <a class="header__logo" href="index.html">BANDSITE</a>
         <nav class="header__nav">
-            <li class="header__nav-item"><a class="header__nav-item-link">Biography</a></li>
-            <li class="header__nav-item"><a class="header__nav-item-link">Shows</a></li>
+            <li class="header__nav-item  header__nav-item--current"><a class="header__nav-item-link header__nav-item-link--bold">Biography</a></li>
+            <li class="header__nav-item "><a class="header__nav-item-link">Shows</a></li>
         </nav>
     </header>
     <main class="main">
@@ -21,14 +21,21 @@
         </section>
 
         <section class="about">
+            <div class="about-one">
                 <h2 class="about__title">About the Musicians</h2>
-                <img class="about__image" src="assets/images/band.jpg" alt="band">
+                    <div class="about__img"></div>
                 <p class="about__quote">“We push each other to be the best. It’s not 
                     uncommon for one of us to say ‘this needs 
                     to be better, back to the drawing board’”</p>
-                <p class="about__quote">- Bryan Teddy, lead vocalist of The Bees 
+                <p class="about__quote about__quote--size">- Bryan Teddy, lead vocalist of The Bees 
                     Knees</p>
+            </div>
+
+
+
+            <div class="about-two">
                 <h3 class="about__title-two">The Bees Knees</h3>
+
                 <p class="about__content">The Bees Knees is a pop rock band originating 
                     from San Francisco, California. The band 
                     consists of lead vocalist Bryan Teddy, guitarist 
@@ -41,7 +48,7 @@
                     One Trick Pony, The Cat’s Meow), Adams was 
                     confident the band could succeed even further, 
                     pushing them to sign with Magenta Records.</p>
-                <p class="about__content">From there, the band has soared, gaining 
+                <p class="about__content about__content--padding">From there, the band has soared, gaining 
                     international recognition and ranking in the 
                     top 10 on the Poster Charts. New fans 
                     immediately fell in love with the band’s original 
@@ -53,78 +60,73 @@
                     stage. Looking forward to touring in the future, 
                     The Bees Knees are currently recording their 
                     second studio album, looking to be released in 
-                    late 2021</p>
+                    late 2021.</p>
+            </div>
             </section>
 
-        </section class="gallery">
-                <img class="gallery__image" src="assets/images/Photo-gallery-1.jpg" alt="gallery-1">
-                <img class="gallery__image" src="assets/images/Photo-gallery-2.jpg" alt="gallery-2">
+        <section class="gallery">
+                <h2 class="gallery__title">Photo Gallery</h2>
+                <div class="gallery-photos">
+                    <img class="gallery__image" src="assets/images/Photo-gallery-1.jpg" alt="gallery-1">
+                    <img class="gallery__image gallery__image--margin" src="assets/images/Photo-gallery-2.jpg" alt="gallery-2">
 
-                <img class="gallery__image" src="assets/images/Photo-gallery-3.jpg" alt="gallery-3">
-                <img class="gallery__image" src="assets/images/Photo-gallery-4.jpg" alt="gallery-4">
+                    <img class="gallery__image" src="assets/images/Photo-gallery-3.jpg" alt="gallery-3">
 
-                <img class="gallery__image" src="assets/images/Photo-gallery-5.jpg" alt="gallery-5">
+                    <img class="gallery__image" src="assets/images/Photo-gallery-4.jpg" alt="gallery-4">
 
-                <img class="gallery__image" src="assets/images/Photo-gallery-6.jpg" alt="gallery-6">
+                    <img class="gallery__image gallery__image--margin" src="assets/images/Photo-gallery-5.jpg" alt="gallery-5">
 
-                <img class="gallery__image" src="assets/images/Photo-gallery-7.jpg" alt="gallery-7">
-                <img class="gallery__image" src="assets/images/Photo-gallery-8.jpg" alt="gallery-8">
-                <img class="gallery__image" src="assets/images/Photo-gallery-9.jpg" alt="gallery-9">
+                    <img class="gallery__image" src="assets/images/Photo-gallery-6.jpg" alt="gallery-6">
+
+                    <img class="gallery__image" src="assets/images/Photo-gallery-7.jpg" alt="gallery-7">
+                    <img class="gallery__image gallery__image--margin" src="assets/images/Photo-gallery-8.jpg" alt="gallery-8">
+                    <img class="gallery__image" src="assets/images/Photo-gallery-9.jpg" alt="gallery-9">
+                </div>
+            </div>
         </section>
 
     </main>
 
     <footer class="footer">
-        <div class="footer-icons">
-            <img class="footer-icons__image" src="assets/icons/SVG/Icon-instagram.svg" alt="instagram">
-            <img class="footer-icons__image" src="assets/icons/SVG/Icon-facebook.svg" alt="facebook">
-            <img class="footer-icons__image" src="assets/icons/SVG/Icon-twitter.svg" alt="twitter">
+        <div class="footer-blockone">
+            <div class="footer-blockone__left">
+                <h2 class="footer__header">Get in Touch</h2>
+                    <div class="footer-icons">
+                        <img class="footer-icons__image" src="assets/icons/SVG/Icon-instagram.svg" alt="instagram">
+                        <img class="footer-icons__image" src="assets/icons/SVG/Icon-facebook.svg" alt="facebook">
+                        <img class="footer-icons__image" src="assets/icons/SVG/Icon-twitter.svg" alt="twitter">
+                    </div>
+        </div>
+            <a href="index.html" class="footer__logo-hidden">BANDSITE</a>
         </div>
 
+    <div class="footer-blocktwo">
         <div class="footer-contacts">
-            <div class="footer-contacts-block">
                 <h3 class="footer-contacts__name">Cam Adams</h3>
-                <h3 class="footer-contacts__title">The Bees Knees Management</h3>
-            </div>
-            <div class="footer-contacts-block">
+                <h3 class="footer-contacts__company">The Bees Knees Management</h3>
                 <p class="footer-contacts__info">503 Broadway Penthouse,</p>
                 <p class="footer-contacts__info">New York, NY 10012, USA</p>
-            </div>
-            <div class="footer-contacts-block">
-                <p class="footer-contacts__info">info@thebeeskness.com</p>
-            </div>
+                <p class="footer-contacts__email">info@thebeeskness.com</p>
         </div>
         
-        <div class="footer-contacts">
-            <div class="footer-contacts-block">
+        <div class="footer-contacts footer-contacts--padding">
                 <h3 class="footer-contacts__name">Pearl Gregg</h3>
-                <h3 class="footer-contacts__title">Limitless Artist Group</h3>
-            </div>
-            <div class="footer-contacts-block">
+                <h3 class="footer-contacts__company">Limitless Artist Group</h3>
                 <p class="footer-contacts__info">Booking Agent for</p>
                 <p class="footer-contacts__info">US / South America / Japan
                 </p>
-            </div>
-            <div class="footer-contacts-block">
-                <p class="footer-contacts__info">pearl.gregg@limitlessag.com</p>
-            </div>
-
-        <div class="footer-contacts">
-                <div class="footer-contacts-block">
-                    <h3 class="footer-contacts__name">Carson Whyte </h3>
-                    <h3 class="footer-contacts__title">ARCH Entertainment</h3>
-                </div>
-                <div class="footer-contacts-block">
-                    <p class="footer-contacts__info">Booking Agent for</p>
-                    <p class="footer-contacts__info">UK / EU / AU
-                    </p>
-                </div>
-                <div class="footer-contacts-block">
-                    <p class="footer-contacts__info">cwhyte@atchentertainment.com</p>
-                </div>    
+                <p class="footer-contacts__email">pearl.gregg@limitlessag.com</p>
         </div>
 
-        <h2 class="footer__title">BANDSITE</h2>
+        <div class="footer-contacts footer-contacts--padding">
+                    <h3 class="footer-contacts__name">Carson Whyte </h3>
+                    <h3 class="footer-contacts__company">ARCH Entertainment</h3>
+                    <p class="footer-contacts__info">Booking Agent for</p>
+                    <p class="footer-contacts__info">UK / EU / AU</p>
+                    <p class="footer-contacts__email">cwhyte@atchentertainment.com</p>
+        </div>
+    </div>
+        <a class="footer__logo" href="index.html">BANDSITE</a>
         <p class="footer__copyright">Copyright The Bees Knees &copy;2021 All Rights Reserved</p>
 
     </footer>
