--- a/sprint-one/index.html
+++ b/sprint-one/index.html
@@ -66,7 +66,7 @@
 
         <section class="gallery">
                 <h2 class="gallery__title">Photo Gallery</h2>
-                <div class="gallery-photos">
+                <div class="gallery-wrapper">
                     <img class="gallery__image" src="assets/images/Photo-gallery-1.jpg" alt="gallery-1">
                     <img class="gallery__image gallery__image--margin" src="assets/images/Photo-gallery-2.jpg" alt="gallery-2">
 
