--- a/sprint-one/index.html
+++ b/sprint-one/index.html
@@ -10,10 +10,10 @@
 <body>
     <header class="header">
         <div class="header__logowrapper"><a class="header__logo" href="index.html">BANDSITE</a></div>
-        <nav class="header__nav">
+        <ul class="header__nav">
             <li class="header__nav-item  header__nav-item--current"><a class="header__nav-item-link header__nav-item-link--bold">Biography</a></li>
             <li class="header__nav-item "><a class="header__nav-item-link">Shows</a></li>
-        </nav>
+        </ul>
     </header>
 
     <main class="main">
@@ -75,7 +75,6 @@
                     <img class="gallery__image gallery__image--bottom" src="assets/images/Photo-gallery-8.jpg" alt="gallery-8">
                     <img class="gallery__image gallery__image--bottom" src="assets/images/Photo-gallery-9.jpg" alt="gallery-9">
                 </div>
-            </div>
         </section>
 
     </main>
