--- a/sprint-two/index.html
+++ b/sprint-two/index.html
@@ -79,14 +79,14 @@
 
         <section class="comments">
             <h2 class="comments__title">Join the Conversation</h2>
-            <form class="comments-insert">
-                <div class="comments-insert__avatar"></div>
-                <div class="comments-insert-wrapper">
-                    <label class="comments-insert-wrapper__label" for="name">NAME: </label>
-                    <input class="comments-insert-wrapper__name" id="name" type="name" placeholder="Enter your name">
-                    <label class="comments-insert-wrapper__label" for="comment">COMMENT: </label>
-                    <input class="comments-insert-wrapper__comment"  id="comment" type="text" placeholder="Add a new comment">
-                    <button type = "submit" class="comments-insert-wrapper__button" id="submitBtn">COMMENT</button>
+            <form class="comments-form">
+                <div class="comments-form__avatar"></div>
+                <div class="comments-form-wrapper">
+                    <label class="comments-form-wrapper__label" for="name">NAME: </label>
+                    <input class="comments-form-wrapper__name" id="name" type="name" placeholder="Enter your name">
+                    <label class="comments-form-wrapper__label" for="comment">COMMENT: </label>
+                    <input class="comments-form-wrapper__comment"  id="comment" type="text" placeholder="Add a new comment">
+                    <button type = "submit" class="comments-form-wrapper__button" id="submitBtn">COMMENT</button>
                 </div>
             </form>
         </section>
