possibly last commit

--- a/sprint-two/pages/shows.html
+++ b/sprint-two/pages/shows.html
@@ -11,8 +11,8 @@
     <header class="header">
         <a href ="../index.html" class="header__logowrapper"><img class="header__logo"src="../assets/logos/Logo-bandsite.svg"></a>
         <ul class="header__nav">
-            <li class="header__nav-item "><a href ="../index.html" class="header__nav-item-link header__nav-item-link--bold">Biography</a></li>
-            <li class="header__nav-item  header__nav-item--current"><a class="header__nav-item-link">Shows</a></li>
+            <li class="header__nav-item "><a href ="../index.html" class="header__nav-item-link ">Biography</a></li>
+            <li class="header__nav-item  header__nav-item--current"><a class="header__nav-item-link header__nav-item-link--bold">Shows</a></li>
         </ul>
     </header>
 
