--- a/sprint-two/index.html
+++ b/sprint-two/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <a href ="../index.html" class="header__logowrapper"><img class="header__logo"src="../assets/logos/Logo-bandsite.svg"></a>
+        <a href ="../index.html" class="header__logowrapper"><img class="header__logo"src="../assets/logos/Logo-bandsite.svg" alt ="logo"></a>
         <ul class="header__nav">
             <li class="header__nav-item  header__nav-item--current"><a href ="./index.html"class="header__nav-item-link header__nav-item-link--bold">Biography</a></li>
             <li class="header__nav-item "><a href ="./pages/shows.html" class="header__nav-item-link">Shows</a></li>
@@ -129,7 +129,7 @@
                     <a href="mailto:cwhyte@atchentertainment.com" class="footer-contacts__email">cwhyte@atchentertainment.com</a>
             </div>
         </div>
-        <a class="footer__logo" href="index.html"><img class="header__logo"src="../assets/logos/Logo-bandsite.svg"></a>
+        <a class="footer__logo" href="index.html"><img class="header__logo"src="../assets/logos/Logo-bandsite.svg" alt ="logo"></a>
         <p class="footer__copyright">Copyright The Bees Knees &copy;2021 All Rights Reserved</p>
     </footer>
     <script src="scripts/index-pages.js"></script>
