--- a/sprint-two/pages/shows.html
+++ b/sprint-two/pages/shows.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <a href ="../index.html" class="header__logowrapper"><img class="header__logo"src="../assets/logos/Logo-bandsite.svg"></a>
+        <a href ="../index.html" class="header__logowrapper"><img class="header__logo" src="../assets/logos/Logo-bandsite.svg" alt = "bnad-logo"></a>
         <ul class="header__nav">
             <li class="header__nav-item "><a href ="../index.html" class="header__nav-item-link ">Biography</a></li>
             <li class="header__nav-item  header__nav-item--current"><a class="header__nav-item-link header__nav-item-link--bold">Shows</a></li>
@@ -24,7 +24,7 @@
                 </h1>
             </div>
                 <div class="iframe-container">
-                    <iframe class="iframe"width="100%" height="160px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/985748308&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                    <iframe class="iframe" width="100%" height="160px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/985748308&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                 </div>
 
         </section>
@@ -32,6 +32,8 @@
             <div class="shows-one"></div>
             
         </section>
+
+    </main>
     <footer class="footer">
         <div class="footer-blockone">
             <div class="footer-blockone-left">
@@ -42,7 +44,7 @@
                         <img class="footer-icons__image" src="../assets/icons/SVG/Icon-twitter.svg" alt="twitter">
                     </div>
                 </div>
-            <a href="../index.html" class="footer__logo-hidden"><img class="header__logo"src="../assets/logos/Logo-bandsite.svg"></a>
+            <a href="../index.html" class="footer__logo-hidden"><img class="header__logo" src="../assets/logos/Logo-bandsite.svg" alt ="logo"></a>
         </div>
 
     <div class="footer-blocktwo">
@@ -69,7 +71,7 @@
                     <a href="mailto:cwhyte@atchentertainment.com" class="footer-contacts__email">cwhyte@atchentertainment.com</a>
             </div>
         </div>
-        <a class="footer__logo" href="../index.html"><img class="header__logo"src="../assets/logos/Logo-bandsite.svg"></a>
+        <a class="footer__logo" href="../index.html"><img class="header__logo" src="../assets/logos/Logo-bandsite.svg"></a>
         <p class="footer__copyright">Copyright The Bees Knees &copy;2021 All Rights Reserved</p>
     </footer>
     <script src="../scripts/build-shows-pages.js"></script>
