working on like buttons

--- a/sprint-three/index.html
+++ b/sprint-three/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <a href ="../index.html" class="header__logowrapper"><img class="header__logo"src="../assets/logos/Logo-bandsite.svg" alt ="logo"></a>
+        <a href ="../index.html" class="header__logowrapper"><img class="header__logo"src="../assets/logos/Logo-bandsite.svg" alt ="bandsite logo image"></a>
         <ul class="header__nav">
             <li class="header__nav-item  header__nav-item--current"><a href ="./index.html"class="header__nav-item-link header__nav-item-link--bold">Biography</a></li>
             <li class="header__nav-item "><a href ="./pages/shows.html" class="header__nav-item-link">Shows</a></li>
@@ -66,15 +66,15 @@
         <section class="gallery">
                 <h2 class="gallery__title">Photo Gallery</h2>
                 <div class="gallery-wrapper">
-                    <img class="gallery__image" src="assets/images/Photo-gallery-1.jpg" alt="gallery-1">
-                    <img class="gallery__image" src="assets/images/Photo-gallery-2.jpg" alt="gallery-2">
-                    <img class="gallery__image" src="assets/images/Photo-gallery-3.jpg" alt="gallery-3">
-                    <img class="gallery__image" src="assets/images/Photo-gallery-4.jpg" alt="gallery-4">
-                    <img class="gallery__image" src="assets/images/Photo-gallery-5.jpg" alt="gallery-5">
-                    <img class="gallery__image" src="assets/images/Photo-gallery-6.jpg" alt="gallery-6">
-                    <img class="gallery__image gallery__image--bottom" src="assets/images/Photo-gallery-7.jpg" alt="gallery-7">
-                    <img class="gallery__image gallery__image--bottom" src="assets/images/Photo-gallery-8.jpg" alt="gallery-8">
-                    <img class="gallery__image gallery__image--bottom" src="assets/images/Photo-gallery-9.jpg" alt="gallery-9">
+                    <img class="gallery__image" src="assets/images/Photo-gallery-1.jpg" alt="gallery image one">
+                    <img class="gallery__image" src="assets/images/Photo-gallery-2.jpg" alt="gallery image two">
+                    <img class="gallery__image" src="assets/images/Photo-gallery-3.jpg" alt="gallery image three">
+                    <img class="gallery__image" src="assets/images/Photo-gallery-4.jpg" alt="gallery image four">
+                    <img class="gallery__image" src="assets/images/Photo-gallery-5.jpg" alt="gallery image five">
+                    <img class="gallery__image" src="assets/images/Photo-gallery-6.jpg" alt="gallery image six">
+                    <img class="gallery__image gallery__image--bottom" src="assets/images/Photo-gallery-7.jpg" alt="gallery image seven">
+                    <img class="gallery__image gallery__image--bottom" src="assets/images/Photo-gallery-8.jpg" alt="gallery image eight">
+                    <img class="gallery__image gallery__image--bottom" src="assets/images/Photo-gallery-9.jpg" alt="gallery image nine">
                 </div>
         </section>
 
@@ -86,7 +86,8 @@
                     <label class="comments-form-wrapper__label" for="name">NAME: </label>
                     <input class="comments-form-wrapper__name" id="name" type="name" placeholder="Enter your name">
                     <label class="comments-form-wrapper__label" for="comment">COMMENT: </label>
-                    <input class="comments-form-wrapper__comment"  id="comment" type="text" placeholder="Add a new comment">
+                    <textarea class="comments-form-wrapper__comment"  id="comment" type="text" placeholder="Add a new comment"></textarea>
+                    
                     <button type = "submit" class="comments-form-wrapper__button" id="submitBtn">COMMENT</button>
                 </div>
             </form>
@@ -98,12 +99,12 @@
             <div class="footer-blockone-left">
                 <h2 class="footer__header">Get in Touch</h2>
                     <div class="footer-icons">
-                        <img class="footer-icons__image" src="assets/icons/SVG/Icon-instagram.svg" alt="instagram">
-                        <img class="footer-icons__image" src="assets/icons/SVG/Icon-facebook.svg" alt="facebook">
-                        <img class="footer-icons__image" src="assets/icons/SVG/Icon-twitter.svg" alt="twitter">
+                        <img class="footer-icons__image" src="assets/icons/SVG/Icon-instagram.svg" alt="instagram icon">
+                        <img class="footer-icons__image" src="assets/icons/SVG/Icon-facebook.svg" alt="facebook icon">
+                        <img class="footer-icons__image" src="assets/icons/SVG/Icon-twitter.svg" alt="twitter icon">
                     </div>
                 </div>
-            <a href="index.html" class="footer__logo-hidden"><img class="header__logo"src="../assets/logos/Logo-bandsite.svg"></a>
+            <a href="index.html" class="footer__logo-hidden"><img class="header__logo"src="../assets/logos/Logo-bandsite.svg" alt="bandsite logo"></a>
         </div>
 
     <div class="footer-blocktwo">
@@ -130,7 +131,7 @@
                     <a href="mailto:cwhyte@atchentertainment.com" class="footer-contacts__email">cwhyte@atchentertainment.com</a>
             </div>
         </div>
-        <a class="footer__logo" href="index.html"><img class="header__logo"src="../assets/logos/Logo-bandsite.svg" alt ="logo"></a>
+        <a class="footer__logo" href="index.html"><img class="header__logo"src="../assets/logos/Logo-bandsite.svg" alt ="bandsite logo"></a>
         <p class="footer__copyright">Copyright The Bees Knees &copy;2021 All Rights Reserved</p>
     </footer>
     <script src="scripts/index-pages.js"></script>
