--- a/sprint-three/pages/shows.html
+++ b/sprint-three/pages/shows.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <a href ="../index.html" class="header__logowrapper"><img class="header__logo" src="../assets/logos/Logo-bandsite.svg" alt = "bnad-logo"></a>
+        <a href ="../index.html" class="header__logowrapper"><img class="header__logo" src="../assets/logos/Logo-bandsite.svg" alt = "bandsite logo image"></a>
         <ul class="header__nav">
             <li class="header__nav-item "><a href ="../index.html" class="header__nav-item-link ">Biography</a></li>
             <li class="header__nav-item  header__nav-item--current"><a class="header__nav-item-link header__nav-item-link--bold">Shows</a></li>
@@ -40,12 +40,12 @@
             <div class="footer-blockone-left">
                 <h2 class="footer__header">Get in Touch</h2>
                     <div class="footer-icons">
-                        <img class="footer-icons__image" src="../assets/icons/SVG/Icon-instagram.svg" alt="instagram">
-                        <img class="footer-icons__image" src="../assets/icons/SVG/Icon-facebook.svg" alt="facebook">
-                        <img class="footer-icons__image" src="../assets/icons/SVG/Icon-twitter.svg" alt="twitter">
+                        <img class="footer-icons__image" src="../assets/icons/SVG/Icon-instagram.svg" alt="instagram icon">
+                        <img class="footer-icons__image" src="../assets/icons/SVG/Icon-facebook.svg" alt="facebook icon">
+                        <img class="footer-icons__image" src="../assets/icons/SVG/Icon-twitter.svg" alt="twitter icon">
                     </div>
                 </div>
-            <a href="../index.html" class="footer__logo-hidden"><img class="header__logo" src="../assets/logos/Logo-bandsite.svg" alt ="logo"></a>
+            <a href="../index.html" class="footer__logo-hidden"><img class="header__logo" src="../assets/logos/Logo-bandsite.svg" alt ="bandsite logo image"></a>
         </div>
 
     <div class="footer-blocktwo">
@@ -72,7 +72,7 @@
                     <a href="mailto:cwhyte@atchentertainment.com" class="footer-contacts__email">cwhyte@atchentertainment.com</a>
             </div>
         </div>
-        <a class="footer__logo" href="../index.html"><img class="header__logo" src="../assets/logos/Logo-bandsite.svg"></a>
+        <a class="footer__logo" href="../index.html"><img class="header__logo" src="../assets/logos/Logo-bandsite.svg" alt = "bandsite logo image"></a>
         <p class="footer__copyright">Copyright The Bees Knees &copy;2021 All Rights Reserved</p>
     </footer>
     <script src="../scripts/build-shows-pages.js"></script>
